engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc
@@ -1788,7 +1788,6 @@ public:
             const std::vector<Collections::KVStore::DroppedCollection>&
                     droppedCollections,
             uint64_t maxSeqno,
-            DomainAwareUniquePtr<DomainAwareKeyIterator> itr,
             uint64_t historyStartSeqno)
         : ByIdScanContext(std::move(cb),
                           std::move(cl),
@@ -1799,11 +1798,8 @@ public:
                           _valFilter,
                           droppedCollections,
                           maxSeqno,
-                          historyStartSeqno),
-          itr(std::move(itr)) {
+                          historyStartSeqno) {
     }
-
-    DomainAwareUniquePtr<DomainAwareKeyIterator> itr{nullptr};
 };
 
 std::unique_ptr<ByIdScanContext> MagmaKVStore::initByIdScanContext(
@@ -1823,13 +1819,6 @@ std::unique_ptr<ByIdScanContext> MagmaKVStore::initByIdScanContext(
     }
 
     auto& snapshot = *dynamic_cast<MagmaKVFileHandle&>(*handle).snapshot;
-    auto itr = magma->NewKeyIterator(snapshot);
-    if (!itr) {
-        logger->warn(
-                "MagmaKVStore::initByIdScanContext {} Failed NewKeyIterator",
-                vbid);
-        return nullptr;
-    }
 
     auto readState = readVBStateFromDisk(vbid, snapshot);
     if (readState.status != ReadVBStateStatus::Success) {
@@ -1853,11 +1842,9 @@ std::unique_ptr<ByIdScanContext> MagmaKVStore::initByIdScanContext(
 
     auto historyStartSeqno = magma->GetOldestHistorySeqno(snapshot);
     logger->info(
-            "MagmaKVStore::initByIdScanContext {} historyStartSeqno:{} "
-            "KeyIterator:{}",
+            "MagmaKVStore::initByIdScanContext {} historyStartSeqno:{} ",
             vbid,
-            historyStartSeqno,
-            itr->to_string());
+            historyStartSeqno);
     return std::make_unique<MagmaByIdScanContext>(std::move(cb),
                                                   std::move(cl),
                                                   vbid,
@@ -1867,7 +1854,6 @@ std::unique_ptr<ByIdScanContext> MagmaKVStore::initByIdScanContext(
                                                   valOptions,
                                                   dropped,
                                                   readState.state.highSeqno,
-                                                  std::move(itr),
                                                   historyStartSeqno);
 }
 
@@ -1896,7 +1882,7 @@ scan_error_t MagmaKVStore::scan(BySeqnoScanContext& ctx,
     auto& snapshot = *dynamic_cast<MagmaKVFileHandle&>(*mctx.handle).snapshot;
     auto itr = magma->NewSeqIterator(snapshot);
     if (!itr) {
-        logger->warn("MagmaKVStore::scan {} Failed to get magma seq iterator",
+        logger->error("MagmaKVStore::scan {} Failed to get magma seq iterator",
                      mctx.vbid);
         return scan_failed;
     }
@@ -1967,7 +1953,16 @@ scan_error_t MagmaKVStore::scan(ByIdScanContext& ctx) const {
 
 scan_error_t MagmaKVStore::scan(ByIdScanContext& ctx,
                                 const ByIdRange& range) const {
-    auto& itr = dynamic_cast<MagmaByIdScanContext&>(ctx).itr;
+
+    auto& snapshot = *dynamic_cast<MagmaKVFileHandle&>(*ctx.handle).snapshot;
+    auto itr = magma->NewKeyIterator(snapshot);
+    if (!itr) {
+        logger->error("MagmaKVStore::scan {} Failed to get magma key iterator",
+                     ctx.vbid);
+
+        return scan_failed;
+    }
+
     Slice keySlice = {reinterpret_cast<const char*>(range.startKey.data()),
                       range.startKey.size()};
     for (itr->Seek(keySlice); itr->Valid(); itr->Next()) {
